resources/css/styles.css
/* Universal Styles */

* {
  box-sizing: border-box;
}

html {
  font-family: "Verdana";
  font-size: 16px;
}

header,
section,
footer {
  width: 100%;
}

/* Header */
/* Menu */

.logo-company {
  width: 200px;
  height: 200px;
  margin-top: auto;
  background-color: rgba(255, 255, 255, 0.94);
  border-radius: 8px;
  opacity: 0.8;
  display: flex;
  align-items: center;
  transition: all ease 0.3s;
}

.logo-company h1 {
  font-size: 2em;
  padding: 1.5em;
  text-align: center;
}

.menu-container {
  display: flex;
  justify-content: space-around;
  align-items: center;
  height: 100px;
}

.menu-main ul {
  display: flex;
}

.sticky {
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
}

.menu-main li {
  margin-right: 1em;
  font-size: 1em;
  opacity: 0.8;
  font-weight: 900;
}

/*Top Banner*/

.top-img {
  height: 800px;
  width: 100%;
}

/*Layout*/

.main-background {
  background-image: url("../img/bento-background.jpg");
  background-repeat: no-repeat;
  opacity: 0.5;
}

.container {
  max-width: 1200px;
  margin: 3em auto;
}

/* Section */

.section-title {
  position: absolute;
  top: -30px;
  background-color: #fff;
  padding: 0 10px;
  font-size: 2em;
}

.title-position-left {
  left: 50px;
}

.title-position-right {
  right: 50px;
}

/*About and services' common section */

.about,
.services,
.company {
  height: 650px;
  position: relative;
  border: solid black;
  border-radius: 14px;
  margin-bottom: 3em;
  font-weight: bold;
}

.about,
.services {
  display: flex;
  align-items: center;
}

/*About section*/

.about-img-block {
  display: flex;
  margin-left: 1em;
}

.about-explanation {
  display: flex;
  align-items: center;
  margin-left: 1em;
  width: 450px;
  height: 350px;
  padding: 2em;
}

.about-img-first,
.about-img-second {
  width: 350px;
  height: 400px;
  margin-right: 1em;
  margin-left: 1em;
  background-color: grey;
}

/*Service section*/

.services {
  justify-content: center;
}
.ecommerce,
.take-away {
  width: 500px;
  height: 500px;
  margin-right: 1em;
  margin-left: 1em;
}

.services-img {
  width: 500px;
  height: 350px;
  background-color: grey;
}

.services-explanation {
  width: 500px;
  height: 175px;
  border: black 1px solid;
  margin-top: 1.5em;
  padding: 1.5em;
}

.services-explanation h1{
  margin-bottom: 0.5em;
}

.about-img-first {
  margin-top: 10em;
}

/*Section Company*/

.company-info{
  max-width: 1200px;
  height: 650px;
  display: flex;
  justify-content: center;
  align-items: center;
}

table tr{
  height: 5em;
}

table tr:nth-child(even) {
  background-color: #dddddd;
}

table td{
  padding: 1em;
}

/*Section Contact*/

.contact {
  height: 650px;
  background-color: #dddddd;
}

.contact-section{
  display: flex;
  justify-content: center;
  align-items: center;
}

.contact-title{
  font-size: 5em;
}

.form{
  margin-left:3em;
  padding: 2em;
}
.form input{
  margin-bottom: 1em;
}

.form label{
  line-height: 2;
}


.form input[type=submit]{
  border-radius: 0.5em;
  padding: 0.5em;
  border: 0 none;
  cursor: pointer;
}

/*footer*/

footer {
  width: 100%;
  height: 75px;
  background-color: #f2f2f2;
}

.footer-position {
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

.footer-position p {
  margin-right: 0.75em;
}

/*Responsive design*/
@media only screen and (max-width: 680px) {
  .menu-container {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    background-color: rgba(255, 255, 255, 0.94);
    height: 400px;
  }

  .menu-main ul {
    flex-direction: column;
    align-items: center;
  }

  .menu-main li {
    font-size: 1.5em;
    line-height: 1.5;
  }

  .top-img {
    margin-top: 250px;
  }
}

@media only screen and (max-width: 1230px) {
  .container {
    max-width: 1000px;
  }
}

@media only screen and (max-width: 1025px) {
  .container {
    max-width: 900px;
  }
}

@media only screen and (max-width: 925px) {
  .container {
    max-width: 800px;
  }
}

@media only screen and (max-width: 825px) {
  .container {
    max-width: 700px;
  }
}

@media only screen and (max-width: 725px) {
  .container {
    max-width: 600px;
  }
}

@media only screen and (max-width: 625px) {
  .container {
    max-width: 500px;
  }
}

